--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -25,6 +25,7 @@
     "angular2-flash-messages": "^3.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "mongoose": "^5.3.14",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
